--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,54 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="record"
-        android:id="@+id/btn_record" />
+        android:id="@+id/btn_record1" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="play"
-        android:id="@+id/btn_play"
-        android:layout_below="@+id/btn_record"
+        android:id="@+id/btn_play2"
+        android:layout_marginBottom="141dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/editText2"
+        android:layout_alignStart="@+id/editText2" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="record"
+        android:id="@+id/btn_record2"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/editText"
+        android:layout_toEndOf="@+id/editText"
+        android:layout_marginLeft="61dp"
+        android:layout_marginStart="61dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:layout_below="@+id/btn_record1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:text="number of loops" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText2"
+        android:layout_alignTop="@+id/editText"
+        android:layout_alignLeft="@+id/btn_record2"
+        android:layout_alignStart="@+id/btn_record2"
+        android:text="number of loops" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="play1"
+        android:id="@+id/btn_play1"
+        android:layout_alignTop="@+id/btn_play2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
 </RelativeLayout>
