--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,57 +10,81 @@
     tools:context="com.example.user1.beatmaker.MainActivity">
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="record"
-        android:id="@+id/btn_record1" />
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="Sound 1"
+        android:id="@+id/btn1" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="play"
-        android:id="@+id/btn_play2"
-        android:layout_marginBottom="141dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/editText2"
-        android:layout_alignStart="@+id/editText2" />
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="Sound 2"
+        android:id="@+id/btn2"
+        android:layout_above="@+id/btn4"
+        android:layout_alignLeft="@+id/btn5"
+        android:layout_alignStart="@+id/btn5" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="record"
-        android:id="@+id/btn_record2"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/editText"
-        android:layout_toEndOf="@+id/editText"
-        android:layout_marginLeft="61dp"
-        android:layout_marginStart="61dp" />
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="Sound 3"
+        android:id="@+id/btn3"
+        android:layout_alignTop="@+id/btn2"
+        android:layout_toRightOf="@+id/btn2"
+        android:layout_toEndOf="@+id/btn2" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:layout_below="@+id/btn_record1"
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="Sound 4"
+        android:id="@+id/btn4"
+        android:layout_below="@+id/btn1"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="number of loops" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText2"
-        android:layout_alignTop="@+id/editText"
-        android:layout_alignLeft="@+id/btn_record2"
-        android:layout_alignStart="@+id/btn_record2"
-        android:text="number of loops" />
+        android:layout_alignParentStart="false" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="play1"
-        android:id="@+id/btn_play1"
-        android:layout_alignTop="@+id/btn_play2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="Sound 5"
+        android:id="@+id/btn5"
+        android:layout_below="@+id/btn2"
+        android:layout_toRightOf="@+id/btn4"
+        android:layout_toEndOf="@+id/btn4" />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="Sound 6"
+        android:id="@+id/btn6"
+        android:layout_below="@+id/btn2"
+        android:layout_toRightOf="@+id/btn5"
+        android:layout_toEndOf="@+id/btn5" />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="Sound 7"
+        android:id="@+id/btn7"
+        android:layout_below="@+id/btn4"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="Sound 8"
+        android:id="@+id/btn8"
+        android:layout_below="@+id/btn4"
+        android:layout_toRightOf="@+id/btn4"
+        android:layout_toEndOf="@+id/btn4" />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="Sound 9"
+        android:id="@+id/btn9"
+        android:layout_below="@+id/btn5"
+        android:layout_toRightOf="@+id/btn8"
+        android:layout_toEndOf="@+id/btn8" />
 
 </RelativeLayout>
